--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,10 @@ target_include_directories(${PROJECT_NAME} PRIVATE
 )
 
 if(MSVC)
+	# On Win32, we need NOGDI and NOUSER to be able to define some Mac functions
+	# whose names are otherwise taken by Windows APIs.
+	target_compile_definitions(${PROJECT_NAME} PRIVATE WIN32_LEAN_AND_MEAN NOGDI NOUSER)
+
 	target_compile_options(${PROJECT_NAME} PRIVATE
 		/EHa
 		/W4
